<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/audio_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connecting" />

    <ImageView
        android:contentDescription="@string/app_name"
        android:layout_marginTop="20dp"
        android:id="@+id/send_audio_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/micphone" />

    <Button
        android:id="@+id/send_audio"
        android:layout_marginTop="30dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/press_send_audio" />

</LinearLayout>