<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:background="#0000ff"
        android:id="@+id/video_title"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <ImageView
            android:contentDescription="@string/app_name"
            android:id="@+id/video_img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/head1" />


	    <TextView
	        android:layout_gravity="center_vertical"
	        android:layout_marginLeft="5dp"
	        android:id="@+id/video_state"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/connecting" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/video_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#0000ff"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/video_handup"
            android:layout_margin="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/handup" />

    </LinearLayout>

    <SurfaceView
        android:id="@+id/surfaceView_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
		android:layout_above="@+id/video_bottom"
        android:layout_below="@+id/video_title"
        android:layout_alignParentLeft="true" />

    <SurfaceView
        android:id="@+id/surfaceView_front"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignBottom="@+id/surfaceView_back"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="17dp" />
    
</RelativeLayout>